--- a/notes/cpp/0147.html
+++ b/notes/cpp/0147.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
@@ -78,12 +79,12 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">18 STL初识 - 容器嵌套容器.cpp</h1>
+        <h1 class="code">19 string容器 - 构造函数.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostream&gt;
+#include<iostream>
 using namespace std;
-#include&lt;string&gt;
+#include<string>
 
 //string的构造函数
 
@@ -99,13 +100,13 @@ void test01()
 	const char* str = "hello world";
 	string s2(str);
 
-	cout &lt;&lt; "s2 = " &lt;&lt; s2 &lt;&lt; endl;
+	cout << "s2 = " << s2 << endl;
 
 	string s3(s2);
-	cout &lt;&lt; "s3 = " &lt;&lt; s3 &lt;&lt; endl;
+	cout << "s3 = " << s3 << endl;
 
 	string s4(10, 'a');
-	cout &lt;&lt; "s4 = " &lt;&lt; s4 &lt;&lt; endl;
+	cout << "s4 = " << s4 << endl;
 }
 
 int main()
