--- a/notes/cpp/0148.html
+++ b/notes/cpp/0148.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
@@ -78,10 +79,10 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">19 string容器 - 构造函数.cpp</h1>
+        <h1 class="code">20 string容器 - 赋值操作.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostream&gt;
+#include<iostream>
 using namespace std;
 
 //string赋值操作
@@ -97,31 +98,31 @@ void test01()
 {
 	string str1;
 	str1 = "hello world";
-	cout &lt;&lt; "str1 = " &lt;&lt; str1 &lt;&lt; endl;
+	cout << "str1 = " << str1 << endl;
 
 	string str2;
 	str2 = str1;
-	cout &lt;&lt; "str2 = " &lt;&lt; str2 &lt;&lt; endl;
+	cout << "str2 = " << str2 << endl;
 
 	string str3;
 	str3 = 'a';
-	cout &lt;&lt; "str3 = " &lt;&lt; str3 &lt;&lt; endl;
+	cout << "str3 = " << str3 << endl;
 
 	string str4;
 	str4.assign("hello C++");
-	cout &lt;&lt; "str4 = " &lt;&lt; str4 &lt;&lt; endl;
+	cout << "str4 = " << str4 << endl;
 
 	string str5;
 	str5.assign("hello C++", 5);
-	cout &lt;&lt; "str5 = " &lt;&lt; str5 &lt;&lt; endl;
+	cout << "str5 = " << str5 << endl;
 
 	string str6;
 	str6.assign(str5);
-	cout &lt;&lt; "str6 = " &lt;&lt; str6 &lt;&lt; endl;
+	cout << "str6 = " << str6 << endl;
 
 	string str7;
 	str7.assign(10, 'w');
-	cout &lt;&lt; "str7 = " &lt;&lt; str7 &lt;&lt; endl;
+	cout << "str7 = " << str7 << endl;
 }
 
 int main()
