--- a/notes/cpp/0173.html
+++ b/notes/cpp/0173.html
@@ -1,23 +1,24 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C++±Ê¼Ç</title>
+    <title>C++ç¬”è®°</title>
     <style type="text/css">
         @font-face {
 	        font-family: Consolas;
 	        src: url("https://github.com/DarkStarLan/DarkStarLan.github.io/blob/main/notes/Consolas.ttf");
         }
         #lan{
-			/* ĞŞ¸ÄÍ·²¿Ñ¡ÏîÀ¸³¤¶È(Ã¿¸ö120px) */
+			/* ä¿®æ”¹å¤´éƒ¨é€‰é¡¹æ é•¿åº¦(æ¯ä¸ª120px) */
 			width: 480px;
 			height: 34px;
 			position: relative;
 			margin: auto;
 		}
 		.right{
-			/* °´Å¥ÊôĞÔ */
+			/* æŒ‰é’®å±æ€§ */
 			font-size: 20px;
 			width: 100px;
 			border-radius: 6px;
@@ -33,7 +34,7 @@
 			box-shadow: 0 5px 10px #999;
 		}
 		.class1{
-			/* °´Å¥¼ä¸ô */
+			/* æŒ‰é’®é—´éš” */
 			width: 120px;
 			height: 34px;
 			float: left;
@@ -57,33 +58,33 @@
         <div id="lan">
             <div class="class1">
                 <a href="https://darkstarlan.github.io/">
-                    <button class="right">Ä¬ÈÏÖ÷Ò³</button>
+                    <button class="right">é»˜è®¤ä¸»é¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/search.html">
-                    <button class="right">µ¼º½Ò³</button>
+                    <button class="right">å¯¼èˆªé¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/notes/cpp.html">
-                    <button class="right">·µ»ØÄ¿Â¼</button>
+                    <button class="right">è¿”å›ç›®å½•</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/download/cpp.html">
-                    <button class="right">Ïà¹ØÏÂÔØ</button>
+                    <button class="right">ç›¸å…³ä¸‹è½½</button>
                 </a>
             </div>
         </div>
         <hr>
-        <!-- ÕıÎÄ -->
-        <h1 class="code">44 listÈİÆ÷ - ¸³ÖµºÍ½»»».cpp</h1>
+        <!-- æ­£æ–‡ -->
+        <h1 class="code">46 listå®¹å™¨ - æ’å…¥å’Œåˆ é™¤.cpp</h1>
         <pre>
             <code class="code">
-ï»¿#include&lt;iostream&gt;
+#include<iostream>
 using namespace std;
-#include&lt;list&gt;
+#include<list>
 
 //listå®¹å™¨æ’å…¥å’Œåˆ é™¤
 
@@ -99,18 +100,18 @@ using namespace std;
 //- erase(pos);				åˆ é™¤posä½ç½®çš„æ•°æ®ï¼Œè¿”å›ä¸‹ä¸€ä¸ªæ•°æ®çš„ä½ç½®
 //- remove(elem);			åˆ é™¤å®¹å™¨ä¸­æ‰€æœ‰ä¸elemå€¼åŒ¹é…çš„å…ƒç´ 
 
-void printList(const list&lt;int&gt;& L)
+void printList(const list<int>& L)
 {
-	for (list&lt;int&gt;::const_iterator it = L.begin(); it != L.end(); it++)
+	for (list<int>::const_iterator it = L.begin(); it != L.end(); it++)
 	{
-		cout &lt;&lt; *it &lt;&lt; " ";
+		cout << *it << " ";
 	}
-	cout &lt;&lt; endl;
+	cout << endl;
 }
 
 void test01()
 {
-	list&lt;int&gt; L;
+	list<int> L;
 
 	//å°¾æ’
 	L.push_back(10);
@@ -136,7 +137,7 @@ void test01()
 	printList(L);
 
 	//insertæ’å…¥
-	list&lt;int&gt;::iterator it = L.begin();
+	list<int>::iterator it = L.begin();
 	L.insert(++it, 1000);
 	// 200 1000 100 10 20
 	printList(L);
