--- a/notes/cpp/0177.html
+++ b/notes/cpp/0177.html
@@ -1,23 +1,24 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C++±Ê¼Ç</title>
+    <title>C++ç¬”è®°</title>
     <style type="text/css">
         @font-face {
 	        font-family: Consolas;
 	        src: url("https://github.com/DarkStarLan/DarkStarLan.github.io/blob/main/notes/Consolas.ttf");
         }
         #lan{
-			/* ĞŞ¸ÄÍ·²¿Ñ¡ÏîÀ¸³¤¶È(Ã¿¸ö120px) */
+			/* ä¿®æ”¹å¤´éƒ¨é€‰é¡¹æ é•¿åº¦(æ¯ä¸ª120px) */
 			width: 480px;
 			height: 34px;
 			position: relative;
 			margin: auto;
 		}
 		.right{
-			/* °´Å¥ÊôĞÔ */
+			/* æŒ‰é’®å±æ€§ */
 			font-size: 20px;
 			width: 100px;
 			border-radius: 6px;
@@ -33,7 +34,7 @@
 			box-shadow: 0 5px 10px #999;
 		}
 		.class1{
-			/* °´Å¥¼ä¸ô */
+			/* æŒ‰é’®é—´éš” */
 			width: 120px;
 			height: 34px;
 			float: left;
@@ -57,50 +58,50 @@
         <div id="lan">
             <div class="class1">
                 <a href="https://darkstarlan.github.io/">
-                    <button class="right">Ä¬ÈÏÖ÷Ò³</button>
+                    <button class="right">é»˜è®¤ä¸»é¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/search.html">
-                    <button class="right">µ¼º½Ò³</button>
+                    <button class="right">å¯¼èˆªé¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/notes/cpp.html">
-                    <button class="right">·µ»ØÄ¿Â¼</button>
+                    <button class="right">è¿”å›ç›®å½•</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/download/cpp.html">
-                    <button class="right">Ïà¹ØÏÂÔØ</button>
+                    <button class="right">ç›¸å…³ä¸‹è½½</button>
                 </a>
             </div>
         </div>
         <hr>
-        <!-- ÕıÎÄ -->
-        <h1 class="code">48 listÈİÆ÷ - ·´×ªºÍÅÅĞò.cpp</h1>
+        <!-- æ­£æ–‡ -->
+        <h1 class="code">51 setå®¹å™¨ - å¤§å°å’Œäº¤æ¢.cpp</h1>
         <pre>
             <code class="code">
-ï»¿#include&lt;iostream&gt;
+#include<iostream>
 using namespace std;
-#include&lt;set&gt;
+#include<set>
 
 //setå®¹å™¨ å¤§å°å’Œäº¤æ¢
 
-void printSet(set&lt;int&gt;& s)
+void printSet(set<int>& s)
 {
-	for (set&lt;int&gt;::iterator it = s.begin(); it != s.end(); it++)
+	for (set<int>::iterator it = s.begin(); it != s.end(); it++)
 	{
-		cout &lt;&lt; *it &lt;&lt; " ";
+		cout << *it << " ";
 	}
-	cout &lt;&lt; endl;
+	cout << endl;
 }
 
 //å¤§å°
 void test01()
 {
 	//ä¸æ”¯æŒresize()
-	set&lt;int&gt; s1;
+	set<int> s1;
 
 	//æ’å…¥æ•°æ®
 	s1.insert(10);
@@ -114,19 +115,19 @@ void test01()
 	//åˆ¤æ–­æ˜¯å¦ä¸ºç©º
 	if (s1.empty())
 	{
-		cout &lt;&lt; "s1ä¸ºç©º" &lt;&lt; endl;
+		cout << "s1ä¸ºç©º" << endl;
 	}
 	else
 	{
-		cout &lt;&lt; "s1ä¸ä¸ºç©º" &lt;&lt; endl;
-		cout &lt;&lt; "s1çš„å¤§å°ä¸º: " &lt;&lt; s1.size() &lt;&lt; endl;;
+		cout << "s1ä¸ä¸ºç©º" << endl;
+		cout << "s1çš„å¤§å°ä¸º: " << s1.size() << endl;;
 	}
 }
 
 //äº¤æ¢
 void test02()
 {
-	set&lt;int&gt; s1;
+	set<int> s1;
 
 	//æ’å…¥æ•°æ®
 	s1.insert(10);
@@ -134,7 +135,7 @@ void test02()
 	s1.insert(20);
 	s1.insert(40);
 
-	set&lt;int&gt; s2;
+	set<int> s2;
 
 	//æ’å…¥æ•°æ®
 	s2.insert(100);
@@ -142,11 +143,11 @@ void test02()
 	s2.insert(200);
 	s2.insert(400);
 
-	cout &lt;&lt; "äº¤æ¢å‰: " &lt;&lt; endl;
+	cout << "äº¤æ¢å‰: " << endl;
 	printSet(s1);
 	printSet(s2);
 
-	cout &lt;&lt; "äº¤æ¢å: " &lt;&lt; endl;
+	cout << "äº¤æ¢å: " << endl;
 	s1.swap(s2);
 	printSet(s1);
 	printSet(s2);
