--- a/notes/cpp/0194.html
+++ b/notes/cpp/0194.html
@@ -1,23 +1,24 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C++±Ê¼Ç</title>
+    <title>C++ç¬”è®°</title>
     <style type="text/css">
         @font-face {
 	        font-family: Consolas;
 	        src: url("https://github.com/DarkStarLan/DarkStarLan.github.io/blob/main/notes/Consolas.ttf");
         }
         #lan{
-			/* ĞŞ¸ÄÍ·²¿Ñ¡ÏîÀ¸³¤¶È(Ã¿¸ö120px) */
+			/* ä¿®æ”¹å¤´éƒ¨é€‰é¡¹æ é•¿åº¦(æ¯ä¸ª120px) */
 			width: 480px;
 			height: 34px;
 			position: relative;
 			margin: auto;
 		}
 		.right{
-			/* °´Å¥ÊôĞÔ */
+			/* æŒ‰é’®å±æ€§ */
 			font-size: 20px;
 			width: 100px;
 			border-radius: 6px;
@@ -33,7 +34,7 @@
 			box-shadow: 0 5px 10px #999;
 		}
 		.class1{
-			/* °´Å¥¼ä¸ô */
+			/* æŒ‰é’®é—´éš” */
 			width: 120px;
 			height: 34px;
 			float: left;
@@ -57,35 +58,35 @@
         <div id="lan">
             <div class="class1">
                 <a href="https://darkstarlan.github.io/">
-                    <button class="right">Ä¬ÈÏÖ÷Ò³</button>
+                    <button class="right">é»˜è®¤ä¸»é¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/search.html">
-                    <button class="right">µ¼º½Ò³</button>
+                    <button class="right">å¯¼èˆªé¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/notes/cpp.html">
-                    <button class="right">·µ»ØÄ¿Â¼</button>
+                    <button class="right">è¿”å›ç›®å½•</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/download/cpp.html">
-                    <button class="right">Ïà¹ØÏÂÔØ</button>
+                    <button class="right">ç›¸å…³ä¸‹è½½</button>
                 </a>
             </div>
         </div>
         <hr>
-        <!-- ÕıÎÄ -->
-        <h1 class="code">65 Î½´Ê - Ò»ÔªÎ½´Ê.cpp</h1>
+        <!-- æ­£æ–‡ -->
+        <h1 class="code">69 å†…å»ºå‡½æ•°å¯¹è±¡ - é€»è¾‘ä»¿å‡½æ•°.cpp</h1>
         <pre>
             <code class="code">
-ï»¿#include&lt;iostream&gt;
+#include<iostream>
 using namespace std;
-#include&lt;vector&gt;
-#include&lt;algorithm&gt;
-#include&lt;functional&gt;
+#include<vector>
+#include<algorithm>
+#include<functional>
 
 // logical_and		é€»è¾‘ä¸
 // logical_or		é€»è¾‘æˆ–
@@ -96,30 +97,30 @@ using namespace std;
 
 void test01()
 {
-	vector&lt;bool&gt; v;
+	vector<bool> v;
 
 	v.push_back(true);
 	v.push_back(false);
 	v.push_back(true);
 	v.push_back(false);
 
-	for (vector&lt;bool&gt;::iterator it = v.begin(); it != v.end(); it++)
+	for (vector<bool>::iterator it = v.begin(); it != v.end(); it++)
 	{
-		cout &lt;&lt; *it &lt;&lt; " ";
+		cout << *it << " ";
 	}
-	cout &lt;&lt; endl;
+	cout << endl;
 
 	//åˆ©ç”¨é€»è¾‘é å°†å®¹å™¨væ¬è¿åˆ°å®¹å™¨v2ä¸­ï¼Œå¹¶æ‰§è¡Œå–åæ“ä½œ
-	vector&lt;bool&gt; v2;
+	vector<bool> v2;
 	v2.resize(v.size());  //ä¸å¼€è¾Ÿç©ºé—´æ— æ³•æ¬è¿
 
-	transform(v.begin(), v.end(), v2.begin(), logical_not&lt;bool&gt;());
+	transform(v.begin(), v.end(), v2.begin(), logical_not<bool>());
 
-	for (vector&lt;bool&gt;::iterator it = v2.begin(); it != v2.end(); it++)
+	for (vector<bool>::iterator it = v2.begin(); it != v2.end(); it++)
 	{
-		cout &lt;&lt; *it &lt;&lt; " ";
+		cout << *it << " ";
 	}
-	cout &lt;&lt; endl;
+	cout << endl;
 }
 
 int main()
