--- a/notes/cpp/0200.html
+++ b/notes/cpp/0200.html
@@ -1,23 +1,24 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C++±Ê¼Ç</title>
+    <title>C++ç¬”è®°</title>
     <style type="text/css">
         @font-face {
 	        font-family: Consolas;
 	        src: url("https://github.com/DarkStarLan/DarkStarLan.github.io/blob/main/notes/Consolas.ttf");
         }
         #lan{
-			/* ĞŞ¸ÄÍ·²¿Ñ¡ÏîÀ¸³¤¶È(Ã¿¸ö120px) */
+			/* ä¿®æ”¹å¤´éƒ¨é€‰é¡¹æ é•¿åº¦(æ¯ä¸ª120px) */
 			width: 480px;
 			height: 34px;
 			position: relative;
 			margin: auto;
 		}
 		.right{
-			/* °´Å¥ÊôĞÔ */
+			/* æŒ‰é’®å±æ€§ */
 			font-size: 20px;
 			width: 100px;
 			border-radius: 6px;
@@ -33,7 +34,7 @@
 			box-shadow: 0 5px 10px #999;
 		}
 		.class1{
-			/* °´Å¥¼ä¸ô */
+			/* æŒ‰é’®é—´éš” */
 			width: 120px;
 			height: 34px;
 			float: left;
@@ -57,40 +58,40 @@
         <div id="lan">
             <div class="class1">
                 <a href="https://darkstarlan.github.io/">
-                    <button class="right">Ä¬ÈÏÖ÷Ò³</button>
+                    <button class="right">é»˜è®¤ä¸»é¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/search.html">
-                    <button class="right">µ¼º½Ò³</button>
+                    <button class="right">å¯¼èˆªé¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/notes/cpp.html">
-                    <button class="right">·µ»ØÄ¿Â¼</button>
+                    <button class="right">è¿”å›ç›®å½•</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/download/cpp.html">
-                    <button class="right">Ïà¹ØÏÂÔØ</button>
+                    <button class="right">ç›¸å…³ä¸‹è½½</button>
                 </a>
             </div>
         </div>
         <hr>
-        <!-- ÕıÎÄ -->
-        <h1 class="code">71 ³£ÓÃ±éÀúËã·¨ - transform.cpp</h1>
+        <!-- æ­£æ–‡ -->
+        <h1 class="code">75 å¸¸ç”¨æŸ¥æ‰¾ç®—æ³• - binary_search.cpp</h1>
         <pre>
             <code class="code">
-ï»¿#include&lt;iostream&gt;
+#include<iostream>
 using namespace std;
-#include&lt;vector&gt;
-#include&lt;algorithm&gt;
+#include<vector>
+#include<algorithm>
 
 //å¸¸ç”¨æŸ¥æ‰¾ç®—æ³• binary_search
 void test01()
 {
-	vector&lt;int&gt; v;
-	for (int i = 0; i &lt; 10; i++)
+	vector<int> v;
+	for (int i = 0; i < 10; i++)
 	{
 		v.push_back(i);
 	}
@@ -100,11 +101,11 @@ void test01()
 	bool ret = binary_search(v.begin(), v.end(), 9);
 	if (ret)
 	{
-		cout &lt;&lt; "æ‰¾åˆ°äº†å…ƒç´ " &lt;&lt; endl;
+		cout << "æ‰¾åˆ°äº†å…ƒç´ " << endl;
 	}
 	else
 	{
-		cout &lt;&lt; "æœªæ‰¾åˆ°" &lt;&lt; endl;
+		cout << "æœªæ‰¾åˆ°" << endl;
 	}
 }
 
