--- a/notes/cpp/0130.html
+++ b/notes/cpp/0130.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
@@ -81,12 +82,12 @@
         <h1 class="code">02 函数模板注意事项.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostream&gt;
+#include<iostream>
 using namespace std;
 
 //函数模板注意事项
 
-template&lt;class T&gt;  //typename可以替换成class
+template<class T>  //typename可以替换成class
 void mySwap(T& a, T& b)
 {
 	T temp = a;
@@ -102,19 +103,19 @@ void test01()
 	char c = 'c';
 	//mySwap(a, b);  //正确!
 	//mySwap(a, c);  //错误! 推导不出一致的T类型
-	cout &lt;&lt; "a = " &lt;&lt; a &lt;&lt; endl;
-	cout &lt;&lt; "b = " &lt;&lt; b &lt;&lt; endl;
+	cout << "a = " << a << endl;
+	cout << "b = " << b << endl;
 }
 //2.模板必须要确定出T的数据类型，才可以使用
-template&lt;class T&gt;
+template<class T>
 void func()
 {
-	cout &lt;&lt; "func 调用" &lt;&lt; endl;
+	cout << "func 调用" << endl;
 }
 
 void test02()
 {
-	func&lt;int&gt;();
+	func<int>();
 }
 
 int main()
