--- a/notes/cpp/0131.html
+++ b/notes/cpp/0131.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
@@ -81,7 +82,7 @@
         <h1 class="code">03 函数模板案例 - 数组排序.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostream&gt;
+#include<iostream>
 using namespace std;
 
 //实现通用 对数组进行排序的函数
@@ -90,7 +91,7 @@ using namespace std;
 //测试 char数组 int数组
 
 //交换函数模板
-template&lt;typename T&gt;
+template<typename T>
 void mySwap(T& a, T& b)
 {
 	T temp = a;
@@ -99,16 +100,16 @@ void mySwap(T& a, T& b)
 }
 
 //排序算法
-template&lt;typename T&gt;
+template<typename T>
 void mySort(T arr[], int len)
 {
-	for (int i = 0; i &lt; len; i++)
+	for (int i = 0; i < len; i++)
 	{
 		int max = i;  //认定最大值的下标
-		for (int j = i + 1; j &lt; len; j++)
+		for (int j = i + 1; j < len; j++)
 		{
 			//认定的最大值 比 遍历出的数值小，说明j下标的元素才是真正的最大值
-			if (arr[max] &lt; arr[j])
+			if (arr[max] < arr[j])
 			{
 				max = j;  //更新最大值下标
 			}
@@ -122,14 +123,14 @@ void mySort(T arr[], int len)
 }
 
 //提供打印数组模板
-template&lt;typename T&gt;
+template<typename T>
 void printArray(T arr[], int len)
 {
-	for (int i = 0; i &lt; len; i++)
+	for (int i = 0; i < len; i++)
 	{
-		cout &lt;&lt; arr[i] &lt;&lt; ' ';
+		cout << arr[i] << ' ';
 	}
-	cout &lt;&lt; endl;
+	cout << endl;
 }
 
 void test01()
