--- a/notes/cpp/0133.html
+++ b/notes/cpp/0133.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
@@ -81,7 +82,7 @@
         <h1 class="code">05 普通函数与函数模板调用规则.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostream&gt;
+#include<iostream>
 using namespace std;
 
 //普通函数与函数模板调用规则
@@ -92,19 +93,19 @@ using namespace std;
 
 void myPrint(int a, int b)
 {
-	cout &lt;&lt; "调用普通函数" &lt;&lt; endl;
+	cout << "调用普通函数" << endl;
 }
 
-template&lt;typename T&gt;
+template<typename T>
 void myPrint(T a, T b)
 {
-	cout &lt;&lt; "调用的模板" &lt;&lt; endl;
+	cout << "调用的模板" << endl;
 }
 
-template&lt;typename T&gt;
+template<typename T>
 void myPrint(T a, T b, T c)
 {
-	cout &lt;&lt; "调用重载的模板" &lt;&lt; endl;
+	cout << "调用重载的模板" << endl;
 }
 
 void test01()
@@ -115,7 +116,7 @@ void test01()
 	//myPrint(a, b);
 
 	//通过空模板的参数列表，强制调用函数模板
-	//myPrint&lt;&gt;(a, b);
+	//myPrint<>(a, b);
 
 	//myPrint(a, b, 100);
 
