--- a/notes/cpp/0136.html
+++ b/notes/cpp/0136.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
@@ -81,24 +82,24 @@
         <h1 class="code">08 类模板与函数模板区别.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostream&gt;
+#include<iostream>
 using namespace std;
-#include&lt;string&gt;
+#include<string>
 
 //类模板与函数模板区别
-template&lt;class NameType, class AgeType = int&gt;
+template<class NameType, class AgeType = int>
 class Person
 {
 public:
 	Person(NameType name, AgeType age)
 	{
-		this-&gt;m_Name = name;
-		this-&gt;m_Age = age;
+		this->m_Name = name;
+		this->m_Age = age;
 	}
 
 	void showPerson()
 	{
-		cout &lt;&lt; "name: " &lt;&lt; this-&gt;m_Name &lt;&lt; " age = " &lt;&lt; this-&gt;m_Age &lt;&lt; endl;
+		cout << "name: " << this->m_Name << " age = " << this->m_Age << endl;
 	}
 
 	NameType m_Name;
@@ -111,7 +112,7 @@ void test01()
 
 	//Person p("孙悟空", 1000); 错误，无法用自动类型推导
 
-	Person&lt;string, int&gt; p("孙悟空", 1000);  //正确，只能用显示指定类型
+	Person<string, int> p("孙悟空", 1000);  //正确，只能用显示指定类型
 
 	p.showPerson();
 
@@ -119,7 +120,7 @@ void test01()
 //2.类模板在模板参数列表中可以有默认参数
 void test02()
 {
-	Person&lt;string&gt; p("猪八戒", 999);
+	Person<string> p("猪八戒", 999);
 
 	p.showPerson();
 }
