--- a/notes/cpp/0139.html
+++ b/notes/cpp/0139.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
@@ -81,18 +82,18 @@
         <h1 class="code">11 类模板与继承.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostream&gt;
+#include<iostream>
 using namespace std;
 
 //类模板与继承
-template&lt;class T&gt;
+template<class T>
 class Base
 {
 	T m;
 };
 
 //class Son : public Base //错误，必须要知道父类中T类型，才能继承给子类
-class Son : public Base&lt;int&gt;
+class Son : public Base<int>
 {
 
 };
@@ -103,14 +104,14 @@ void test01()
 }
 
 //如果想灵活指定父类中T类型，子类也需要变类模板
-template&lt;class T1, class T2&gt;
-class Son2 : public Base&lt;T2&gt;
+template<class T1, class T2>
+class Son2 : public Base<T2>
 {
 public:
 	Son2()
 	{
-		cout &lt;&lt; "T1的类型为: " &lt;&lt; typeid(T1).name() &lt;&lt; endl;
-		cout &lt;&lt; "T2的类型为: " &lt;&lt; typeid(T2).name() &lt;&lt; endl;
+		cout << "T1的类型为: " << typeid(T1).name() << endl;
+		cout << "T2的类型为: " << typeid(T2).name() << endl;
 	}
 
 	T1 obj;
@@ -118,7 +119,7 @@ public:
 
 void test02()
 {
-	Son2&lt;int, char&gt; s2;
+	Son2<int, char> s2;
 }
 
 int main()
