--- a/notes/cpp/0140.html
+++ b/notes/cpp/0140.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
@@ -81,23 +82,23 @@
         <h1 class="code">12 类模板成员函数类外实现.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostream&gt;
+#include<iostream>
 using namespace std;
 
 //类模板成员函数类外实现
-template&lt;class T1, class T2&gt;
+template<class T1, class T2>
 class Person
 {
 public:
 	Person(T1 name, T2 age);
 	//{
-	//	this-&gt;m_Name = name;
-	//	this-&gt;m_Age = age;
+	//	this->m_Name = name;
+	//	this->m_Age = age;
 	//}
 
 	void showPerson();
 	//{
-	//	cout &lt;&lt; "姓名: " &lt;&lt; this-&gt;m_Name &lt;&lt; " 年龄: " &lt;&lt; this-&gt;m_Age &lt;&lt; endl;
+	//	cout << "姓名: " << this->m_Name << " 年龄: " << this->m_Age << endl;
 	//}
 
 	T1 m_Name;
@@ -105,23 +106,23 @@ public:
 };
 
 //构造函数类外实现
-template&lt;class T1, class T2&gt;
-Person&lt;T1, T2&gt;::Person(T1 name, T2 age)
+template<class T1, class T2>
+Person<T1, T2>::Person(T1 name, T2 age)
 {
-	this-&gt;m_Name = name;
-	this-&gt;m_Age = age;
+	this->m_Name = name;
+	this->m_Age = age;
 }
 
 //成员函数类外实现
-template&lt;class T1, class T2&gt;
-void Person&lt;T1, T2&gt;::showPerson()
+template<class T1, class T2>
+void Person<T1, T2>::showPerson()
 {
-	cout &lt;&lt; "姓名: " &lt;&lt; this-&gt;m_Name &lt;&lt; " 年龄: " &lt;&lt; this-&gt;m_Age &lt;&lt; endl;
+	cout << "姓名: " << this->m_Name << " 年龄: " << this->m_Age << endl;
 }
 
 void test01()
 {
-	Person&lt;string, int&gt; p("Tom", 20);
+	Person<string, int> p("Tom", 20);
 	p.showPerson();
 }
 
