--- a/notes/cpp/0141.html
+++ b/notes/cpp/0141.html
@@ -1,23 +1,24 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C++±Ê¼Ç</title>
+    <title>C++ç¬”è®°</title>
     <style type="text/css">
         @font-face {
 	        font-family: Consolas;
 	        src: url("https://github.com/DarkStarLan/DarkStarLan.github.io/blob/main/notes/Consolas.ttf");
         }
         #lan{
-			/* ĞŞ¸ÄÍ·²¿Ñ¡ÏîÀ¸³¤¶È(Ã¿¸ö120px) */
+			/* ä¿®æ”¹å¤´éƒ¨é€‰é¡¹æ é•¿åº¦(æ¯ä¸ª120px) */
 			width: 480px;
 			height: 34px;
 			position: relative;
 			margin: auto;
 		}
 		.right{
-			/* °´Å¥ÊôĞÔ */
+			/* æŒ‰é’®å±æ€§ */
 			font-size: 20px;
 			width: 100px;
 			border-radius: 6px;
@@ -33,7 +34,7 @@
 			box-shadow: 0 5px 10px #999;
 		}
 		.class1{
-			/* °´Å¥¼ä¸ô */
+			/* æŒ‰é’®é—´éš” */
 			width: 120px;
 			height: 34px;
 			float: left;
@@ -57,31 +58,31 @@
         <div id="lan">
             <div class="class1">
                 <a href="https://darkstarlan.github.io/">
-                    <button class="right">Ä¬ÈÏÖ÷Ò³</button>
+                    <button class="right">é»˜è®¤ä¸»é¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/search.html">
-                    <button class="right">µ¼º½Ò³</button>
+                    <button class="right">å¯¼èˆªé¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/notes/cpp.html">
-                    <button class="right">·µ»ØÄ¿Â¼</button>
+                    <button class="right">è¿”å›ç›®å½•</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/download/cpp.html">
-                    <button class="right">Ïà¹ØÏÂÔØ</button>
+                    <button class="right">ç›¸å…³ä¸‹è½½</button>
                 </a>
             </div>
         </div>
         <hr>
-        <!-- ÕıÎÄ -->
-        <h1 class="code">13 - 1 ÀàÄ£°å·ÖÎÄ¼ş±àĞ´.cpp</h1>
+        <!-- æ­£æ–‡ -->
+        <h1 class="code">13 - 1 ç±»æ¨¡æ¿åˆ†æ–‡ä»¶ç¼–å†™.cpp</h1>
         <pre>
             <code class="code">
-ï»¿#include&lt;iostream&gt;
+#include<iostream>
 using namespace std;
 
 //#include "å¤´æ–‡ä»¶/person.h"  é”™è¯¯
@@ -92,8 +93,8 @@ using namespace std;
 #include "å¤´æ–‡ä»¶/person.hpp"
 
 //ç±»æ¨¡æ¿åˆ†æ–‡ä»¶ç¼–å†™é—®é¢˜ä»¥åŠè§£å†³
-//#include&lt;string&gt;
-//template&lt;class T1, class T2&gt;
+//#include<string>
+//template<class T1, class T2>
 //class Person
 //{
 //public:
@@ -105,22 +106,22 @@ using namespace std;
 //	T2 m_Age;
 //};
 
-//template&lt;class T1, class T2&gt;
-//Person&lt;T1, T2&gt;::Person(T1 name, T2 age)
+//template<class T1, class T2>
+//Person<T1, T2>::Person(T1 name, T2 age)
 //{
-//	this-&gt;m_Name = name;
-//	this-&gt;m_Age = age;
+//	this->m_Name = name;
+//	this->m_Age = age;
 //}
 //
-//template&lt;class T1, class T2&gt;
-//void Person&lt;T1, T2&gt;::showPerson()
+//template<class T1, class T2>
+//void Person<T1, T2>::showPerson()
 //{
-//	cout &lt;&lt; "å§“å: " &lt;&lt; this-&gt;m_Name &lt;&lt; " å¹´é¾„: " &lt;&lt; this-&gt;m_Age &lt;&lt; endl;
+//	cout << "å§“å: " << this->m_Name << " å¹´é¾„: " << this->m_Age << endl;
 //}
 
 void test01()
 {
-	Person&lt;string, int&gt; p("Jerry", 18);
+	Person<string, int> p("Jerry", 18);
 	p.showPerson();
 }
 
