--- a/notes/cpp/0142.html
+++ b/notes/cpp/0142.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
@@ -83,17 +84,17 @@
             <code class="code">
 #include "头文件/person.h"
 
-template&lt;class T1, class T2&gt;
-Person&lt;T1, T2&gt;::Person(T1 name, T2 age)
+template<class T1, class T2>
+Person<T1, T2>::Person(T1 name, T2 age)
 {
-	this-&gt;m_Name = name;
-	this-&gt;m_Age = age;
+	this->m_Name = name;
+	this->m_Age = age;
 }
 
-template&lt;class T1, class T2&gt;
-void Person&lt;T1, T2&gt;::showPerson()
+template<class T1, class T2>
+void Person<T1, T2>::showPerson()
 {
-	cout &lt;&lt; "姓名: " &lt;&lt; this-&gt;m_Name &lt;&lt; " 年龄: " &lt;&lt; this-&gt;m_Age &lt;&lt; endl;
+	cout << "姓名: " << this->m_Name << " 年龄: " << this->m_Age << endl;
 }
             </code>
         </pre>
