--- a/notes/cpp/0143.html
+++ b/notes/cpp/0143.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
@@ -81,42 +82,42 @@
         <h1 class="code">14 类模板与友元.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostream&gt;
+#include<iostream>
 using namespace std;
-#include&lt;string&gt;
+#include<string>
 
 //通过全局函数 打印Person信息
 
 //提前让编译器知道Person类存在
-template&lt;class T1, class T2&gt;
+template<class T1, class T2>
 class Person;
 
 //类外实现
-template&lt;class T1, class T2&gt;
-void printPerson2(Person&lt;T1, T2&gt; p)
+template<class T1, class T2>
+void printPerson2(Person<T1, T2> p)
 {
-	cout &lt;&lt; "类外实现 --- 姓名: " &lt;&lt; p.m_Name &lt;&lt; " 年龄: " &lt;&lt; p.m_Age &lt;&lt; endl;
+	cout << "类外实现 --- 姓名: " << p.m_Name << " 年龄: " << p.m_Age << endl;
 }
 
-template&lt;class T1, class T2&gt;
+template<class T1, class T2>
 class Person
 {
 	//全局函数 类内实现
-	friend void printPerson(Person&lt;T1, T2&gt; p)
+	friend void printPerson(Person<T1, T2> p)
 	{
-		cout &lt;&lt; "姓名: " &lt;&lt; p.m_Name &lt;&lt; " 年龄: " &lt;&lt; p.m_Age &lt;&lt; endl;
+		cout << "姓名: " << p.m_Name << " 年龄: " << p.m_Age << endl;
 	}
 
 	//全局函数 类外实现
 	//加空模板参数列表
 	//如果全局函数 是类外实现，需要让编译器提前知道这个函数的存在
-	friend void printPerson2&lt;&gt;(Person&lt;T1, T2&gt; p);
+	friend void printPerson2<>(Person<T1, T2> p);
 
 public:
 	Person(T1 name, T2 age)
 	{
-		this-&gt;m_Name = name;
-		this-&gt;m_Age = age;
+		this->m_Name = name;
+		this->m_Age = age;
 	}
 
 private:
@@ -127,7 +128,7 @@ private:
 //1.全局函数在类内实现
 void test01()
 {
-	Person&lt;string, int&gt; p("Tom", 20);
+	Person<string, int> p("Tom", 20);
 
 	printPerson(p);
 }
@@ -135,7 +136,7 @@ void test01()
 //2.全局函数在类外实现
 void test02()
 {
-	Person&lt;string, int&gt; p("Jerry", 20);
+	Person<string, int> p("Jerry", 20);
 
 	printPerson2(p);
 }
