--- a/notes/cpp/0144.html
+++ b/notes/cpp/0144.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
@@ -78,25 +79,25 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">15 类模板案例 - 数组类封装.cpp</h1>
+        <h1 class="code">16 STL初识 - vector存放内置数据类型.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostream&gt;
+#include<iostream>
 using namespace std;
-#include&lt;vector&gt;
-#include&lt;algorithm&gt;  //标准算法头文件
+#include<vector>
+#include<algorithm>  //标准算法头文件
 
 //vector容器存放内置数据类型
 
 void myPrint(int val)
 {
-	cout &lt;&lt; val &lt;&lt; endl;
+	cout << val << endl;
 }
 
 void test01()
 {
 	//创建了一个vector容器，数组
-	vector&lt;int&gt; v;
+	vector<int> v;
 
 	//向容器中插入数据
 	v.push_back(10);
@@ -105,20 +106,20 @@ void test01()
 	v.push_back(40);
 
 	//通过迭代器访问容器中的数据
-	//vector&lt;int&gt;::iterator itBegin = v.begin();  //起始迭代器 指向容器中第一个元素
-	//vector&lt;int&gt;::iterator itEnd = v.end();  //结束迭代器 指向容器中最后一个元素的下一个位置
+	//vector<int>::iterator itBegin = v.begin();  //起始迭代器 指向容器中第一个元素
+	//vector<int>::iterator itEnd = v.end();  //结束迭代器 指向容器中最后一个元素的下一个位置
 
 	//第一种遍历方式
 	//while (itBegin != itEnd)
 	//{
-	//	cout &lt;&lt; *itBegin &lt;&lt; endl;
+	//	cout << *itBegin << endl;
 	//	itBegin++;
 	//}
 
 	//第二种遍历方式
-	//for (vector&lt;int&gt;::iterator it = v.begin(); it != v.end(); it++)
+	//for (vector<int>::iterator it = v.begin(); it != v.end(); it++)
 	//{
-	//	cout &lt;&lt; *it &lt;&lt; endl;
+	//	cout << *it << endl;
 	//}
 
 	//第三种遍历方式  利用STL提供遍历算法
