--- a/notes/cpp/0145.html
+++ b/notes/cpp/0145.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
@@ -78,13 +79,13 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">16 STL初识 - vector存放内置数据类型.cpp</h1>
+        <h1 class="code">17 STL初识 - vector存放自定义数据类型.cpp</h1>
         <pre>
             <code class="code">
-#include&lt;iostream&gt;
+#include<iostream>
 using namespace std;
-#include&lt;vector&gt;
-#include&lt;string&gt;
+#include<vector>
+#include<string>
 
 //vector容器中存放自定义数据类型
 class Person
@@ -92,8 +93,8 @@ class Person
 public:
 	Person(string name, int age)
 	{
-		this-&gt;m_Name = name;
-		this-&gt;m_Age = age;
+		this->m_Name = name;
+		this->m_Age = age;
 	}
 	string m_Name;
 	int m_Age;
@@ -101,7 +102,7 @@ public:
 
 void test01()
 {
-	vector&lt;Person&gt; v;
+	vector<Person> v;
 
 	Person p1("aaa", 10);
 	Person p2("bbb", 20);
@@ -117,17 +118,17 @@ void test01()
 	v.push_back(p5);
 
 	//遍历容器中的数据
-	for (vector&lt;Person&gt;::iterator it = v.begin(); it != v.end(); it++)
+	for (vector<Person>::iterator it = v.begin(); it != v.end(); it++)
 	{
-		//cout &lt;&lt; "姓名: " &lt;&lt; (*it).m_Name &lt;&lt; " 年龄: " &lt;&lt; (*it).m_Age &lt;&lt; endl;
-		cout &lt;&lt; "姓名: " &lt;&lt; it-&gt;m_Name &lt;&lt; " 年龄: " &lt;&lt; it-&gt;m_Age &lt;&lt; endl;
+		//cout << "姓名: " << (*it).m_Name << " 年龄: " << (*it).m_Age << endl;
+		cout << "姓名: " << it->m_Name << " 年龄: " << it->m_Age << endl;
 	}
 }
 
 //存放自定义数据类型的指针
 void test02()
 {
-	vector&lt;Person*&gt; v;
+	vector<Person*> v;
 
 	Person p1("aaa", 10);
 	Person p2("bbb", 20);
@@ -143,9 +144,9 @@ void test02()
 	v.push_back(&p5);
 
 	//遍历容器
-	for (vector&lt;Person*&gt;::iterator it = v.begin(); it != v.end(); it++)
+	for (vector<Person*>::iterator it = v.begin(); it != v.end(); it++)
 	{
-		cout &lt;&lt; "::姓名: " &lt;&lt; (*it)-&gt;m_Name &lt;&lt; " 年龄: " &lt;&lt; (*it)-&gt;m_Age &lt;&lt; endl;
+		cout << "::姓名: " << (*it)->m_Name << " 年龄: " << (*it)->m_Age << endl;
 	}
 }
 
