--- a/notes/cpp/0149.html
+++ b/notes/cpp/0149.html
@@ -1,23 +1,24 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C++±Ê¼Ç</title>
+    <title>C++ç¬”è®°</title>
     <style type="text/css">
         @font-face {
 	        font-family: Consolas;
 	        src: url("https://github.com/DarkStarLan/DarkStarLan.github.io/blob/main/notes/Consolas.ttf");
         }
         #lan{
-			/* ĞŞ¸ÄÍ·²¿Ñ¡ÏîÀ¸³¤¶È(Ã¿¸ö120px) */
+			/* ä¿®æ”¹å¤´éƒ¨é€‰é¡¹æ é•¿åº¦(æ¯ä¸ª120px) */
 			width: 480px;
 			height: 34px;
 			position: relative;
 			margin: auto;
 		}
 		.right{
-			/* °´Å¥ÊôĞÔ */
+			/* æŒ‰é’®å±æ€§ */
 			font-size: 20px;
 			width: 100px;
 			border-radius: 6px;
@@ -33,7 +34,7 @@
 			box-shadow: 0 5px 10px #999;
 		}
 		.class1{
-			/* °´Å¥¼ä¸ô */
+			/* æŒ‰é’®é—´éš” */
 			width: 120px;
 			height: 34px;
 			float: left;
@@ -57,33 +58,33 @@
         <div id="lan">
             <div class="class1">
                 <a href="https://darkstarlan.github.io/">
-                    <button class="right">Ä¬ÈÏÖ÷Ò³</button>
+                    <button class="right">é»˜è®¤ä¸»é¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/search.html">
-                    <button class="right">µ¼º½Ò³</button>
+                    <button class="right">å¯¼èˆªé¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/notes/cpp.html">
-                    <button class="right">·µ»ØÄ¿Â¼</button>
+                    <button class="right">è¿”å›ç›®å½•</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/download/cpp.html">
-                    <button class="right">Ïà¹ØÏÂÔØ</button>
+                    <button class="right">ç›¸å…³ä¸‹è½½</button>
                 </a>
             </div>
         </div>
         <hr>
-        <!-- ÕıÎÄ -->
-        <h1 class="code">20 stringÈİÆ÷ - ¸³Öµ²Ù×÷.cpp</h1>
+        <!-- æ­£æ–‡ -->
+        <h1 class="code">21 stringå®¹å™¨ - å­—ç¬¦ä¸²æ‹¼æ¥.cpp</h1>
         <pre>
             <code class="code">
-ï»¿#include&lt;iostream&gt;
+#include<iostream>
 using namespace std;
-#include&lt;string&gt;
+#include<string>
 
 //stringå­—ç¬¦ä¸²æ‹¼æ¥
 //- string& operator+=(const char* str);				é‡è½½+=æ“ä½œç¬¦
@@ -100,30 +101,30 @@ void test01()
 
 	str1 += "çˆ±ç©æ¸¸æˆ";
 
-	cout &lt;&lt; "str1 = " &lt;&lt; str1 &lt;&lt; endl;
+	cout << "str1 = " << str1 << endl;
 
 	str1 += ':';
 
-	cout &lt;&lt; "str1 = " &lt;&lt; str1 &lt;&lt; endl;
+	cout << "str1 = " << str1 << endl;
 
 	string str2 = "LOL DNF";
 
 	str1 += str2;
-	cout &lt;&lt; "str1 = " &lt;&lt; str1 &lt;&lt; endl;
+	cout << "str1 = " << str1 << endl;
 
 	string str3 = "I";
 	str3.append(" love ");
-	cout &lt;&lt; "str3 = " &lt;&lt; str3 &lt;&lt; endl;
+	cout << "str3 = " << str3 << endl;
 
 	str3.append("game abcde", 4);
 	// I love game
-	cout &lt;&lt; "str3 = " &lt;&lt; str3 &lt;&lt; endl;
+	cout << "str3 = " << str3 << endl;
 
 	//str3.append(str2);
 	str3.append(str2, 0, 3);  //åªæˆªå–åˆ°LOL
 	str3.append(str2, 4,3);  //åªæˆªå–åˆ°DNF å‚æ•°2 ä»å“ªä¸ªä½ç½®å¼€å§‹æˆªå–,å‚æ•°3 æˆªå–å­—ç¬¦ä¸ªæ•°
 	// I love game LOL DNF
-	cout &lt;&lt; "str3 = " &lt;&lt; str3 &lt;&lt; endl;
+	cout << "str3 = " << str3 << endl;
 }
 
 int main()
