--- a/notes/cpp/0150.html
+++ b/notes/cpp/0150.html
@@ -1,23 +1,24 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C++±Ê¼Ç</title>
+    <title>C++ç¬”è®°</title>
     <style type="text/css">
         @font-face {
 	        font-family: Consolas;
 	        src: url("https://github.com/DarkStarLan/DarkStarLan.github.io/blob/main/notes/Consolas.ttf");
         }
         #lan{
-			/* ĞŞ¸ÄÍ·²¿Ñ¡ÏîÀ¸³¤¶È(Ã¿¸ö120px) */
+			/* ä¿®æ”¹å¤´éƒ¨é€‰é¡¹æ é•¿åº¦(æ¯ä¸ª120px) */
 			width: 480px;
 			height: 34px;
 			position: relative;
 			margin: auto;
 		}
 		.right{
-			/* °´Å¥ÊôĞÔ */
+			/* æŒ‰é’®å±æ€§ */
 			font-size: 20px;
 			width: 100px;
 			border-radius: 6px;
@@ -33,7 +34,7 @@
 			box-shadow: 0 5px 10px #999;
 		}
 		.class1{
-			/* °´Å¥¼ä¸ô */
+			/* æŒ‰é’®é—´éš” */
 			width: 120px;
 			height: 34px;
 			float: left;
@@ -57,33 +58,33 @@
         <div id="lan">
             <div class="class1">
                 <a href="https://darkstarlan.github.io/">
-                    <button class="right">Ä¬ÈÏÖ÷Ò³</button>
+                    <button class="right">é»˜è®¤ä¸»é¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/search.html">
-                    <button class="right">µ¼º½Ò³</button>
+                    <button class="right">å¯¼èˆªé¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/notes/cpp.html">
-                    <button class="right">·µ»ØÄ¿Â¼</button>
+                    <button class="right">è¿”å›ç›®å½•</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/download/cpp.html">
-                    <button class="right">Ïà¹ØÏÂÔØ</button>
+                    <button class="right">ç›¸å…³ä¸‹è½½</button>
                 </a>
             </div>
         </div>
         <hr>
-        <!-- ÕıÎÄ -->
-        <h1 class="code">21 stringÈİÆ÷ - ×Ö·û´®Æ´½Ó.cpp</h1>
+        <!-- æ­£æ–‡ -->
+        <h1 class="code">22 stringå®¹å™¨ - å­—ç¬¦ä¸²æŸ¥æ‰¾å’Œæ›¿æ¢.cpp</h1>
         <pre>
             <code class="code">
-ï»¿#include&lt;iostream&gt;
+#include<iostream>
 using namespace std;
-#include&lt;string&gt;
+#include<string>
 
 //å­—ç¬¦ä¸²æŸ¥æ‰¾å’Œæ›¿æ¢
 
@@ -96,18 +97,18 @@ void test01()
 
 	if (pos == -1)
 	{
-		cout &lt;&lt; "æœªæ‰¾åˆ°å­—ç¬¦ä¸²" &lt;&lt; endl;
+		cout << "æœªæ‰¾åˆ°å­—ç¬¦ä¸²" << endl;
 	}
 	else
 	{
-		cout &lt;&lt; "æ‰¾åˆ°å­—ç¬¦ä¸², pos = " &lt;&lt; pos &lt;&lt; endl;
+		cout << "æ‰¾åˆ°å­—ç¬¦ä¸², pos = " << pos << endl;
 	}
 	
 	//rfind
 	//rfindä»å³å¾€å·¦æŸ¥æ‰¾  findä»å·¦å¾€å³æŸ¥æ‰¾
 	pos = str1.rfind("de");
 
-	cout &lt;&lt; "pos = " &lt;&lt; pos &lt;&lt; endl;
+	cout << "pos = " << pos << endl;
 }
 
 //2.æ›¿æ¢
@@ -118,7 +119,7 @@ void test02()
 	//ä»1å·ä½ç½®èµ· 3ä¸ªå­—ç¬¦ æ›¿æ¢ä¸º1111
 	str1.replace(1, 3, "1111");
 
-	cout &lt;&lt; "str1 = " &lt;&lt; str1 &lt;&lt; endl;
+	cout << "str1 = " << str1 << endl;
 }
 
 int main()
