--- a/notes/cpp/0152.html
+++ b/notes/cpp/0152.html
@@ -1,23 +1,24 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C++±Ê¼Ç</title>
+    <title>C++ç¬”è®°</title>
     <style type="text/css">
         @font-face {
 	        font-family: Consolas;
 	        src: url("https://github.com/DarkStarLan/DarkStarLan.github.io/blob/main/notes/Consolas.ttf");
         }
         #lan{
-			/* ĞŞ¸ÄÍ·²¿Ñ¡ÏîÀ¸³¤¶È(Ã¿¸ö120px) */
+			/* ä¿®æ”¹å¤´éƒ¨é€‰é¡¹æ é•¿åº¦(æ¯ä¸ª120px) */
 			width: 480px;
 			height: 34px;
 			position: relative;
 			margin: auto;
 		}
 		.right{
-			/* °´Å¥ÊôĞÔ */
+			/* æŒ‰é’®å±æ€§ */
 			font-size: 20px;
 			width: 100px;
 			border-radius: 6px;
@@ -33,7 +34,7 @@
 			box-shadow: 0 5px 10px #999;
 		}
 		.class1{
-			/* °´Å¥¼ä¸ô */
+			/* æŒ‰é’®é—´éš” */
 			width: 120px;
 			height: 34px;
 			float: left;
@@ -57,63 +58,63 @@
         <div id="lan">
             <div class="class1">
                 <a href="https://darkstarlan.github.io/">
-                    <button class="right">Ä¬ÈÏÖ÷Ò³</button>
+                    <button class="right">é»˜è®¤ä¸»é¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/search.html">
-                    <button class="right">µ¼º½Ò³</button>
+                    <button class="right">å¯¼èˆªé¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/notes/cpp.html">
-                    <button class="right">·µ»ØÄ¿Â¼</button>
+                    <button class="right">è¿”å›ç›®å½•</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/download/cpp.html">
-                    <button class="right">Ïà¹ØÏÂÔØ</button>
+                    <button class="right">ç›¸å…³ä¸‹è½½</button>
                 </a>
             </div>
         </div>
         <hr>
-        <!-- ÕıÎÄ -->
-        <h1 class="code">23 stringÈİÆ÷ - ×Ö·û´®±È½Ï.cpp</h1>
+        <!-- æ­£æ–‡ -->
+        <h1 class="code">24 stringå®¹å™¨ - å­—ç¬¦å­˜å–.cpp</h1>
         <pre>
             <code class="code">
-ï»¿#include&lt;iostream&gt;
+#include<iostream>
 using namespace std;
-#include&lt;string&gt;
+#include<string>
 
 //24 string å­—ç¬¦å­˜å–
 void test01()
 {
 	string str = "hello";
 
-	//cout &lt;&lt; "str = " &lt;&lt; str &lt;&lt; endl;
+	//cout << "str = " << str << endl;
 
 	//1.é€šè¿‡[]è®¿é—®å•ä¸ªå­—ç¬¦
-	for (int i = 0; i &lt; str.size(); i++)
+	for (int i = 0; i < str.size(); i++)
 	{
-		cout &lt;&lt; str[i] &lt;&lt; " ";
+		cout << str[i] << " ";
 	}
-	cout &lt;&lt; endl;
+	cout << endl;
 
 	//2.é€šè¿‡atæ–¹å¼è®¿é—®å•ä¸ªå­—ç¬¦
-	for (int i = 0; i &lt; str.size(); i++)
+	for (int i = 0; i < str.size(); i++)
 	{
-		cout &lt;&lt; str.at(i) &lt;&lt; " ";
+		cout << str.at(i) << " ";
 	}
-	cout &lt;&lt; endl;
+	cout << endl;
 
 	//ä¿®æ”¹å•ä¸ªå­—ç¬¦
 	str[0] = 'x';
 	// xello
-	cout &lt;&lt; "str = " &lt;&lt; str &lt;&lt; endl;
+	cout << "str = " << str << endl;
 
 	str.at(1) = 'x';
 	// xxllo
-	cout &lt;&lt; "str = " &lt;&lt; str &lt;&lt; endl;
+	cout << "str = " << str << endl;
 }
 
 int main()
