--- a/notes/cpp/0156.html
+++ b/notes/cpp/0156.html
@@ -1,23 +1,24 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C++±Ê¼Ç</title>
+    <title>C++ç¬”è®°</title>
     <style type="text/css">
         @font-face {
 	        font-family: Consolas;
 	        src: url("https://github.com/DarkStarLan/DarkStarLan.github.io/blob/main/notes/Consolas.ttf");
         }
         #lan{
-			/* ĞŞ¸ÄÍ·²¿Ñ¡ÏîÀ¸³¤¶È(Ã¿¸ö120px) */
+			/* ä¿®æ”¹å¤´éƒ¨é€‰é¡¹æ é•¿åº¦(æ¯ä¸ª120px) */
 			width: 480px;
 			height: 34px;
 			position: relative;
 			margin: auto;
 		}
 		.right{
-			/* °´Å¥ÊôĞÔ */
+			/* æŒ‰é’®å±æ€§ */
 			font-size: 20px;
 			width: 100px;
 			border-radius: 6px;
@@ -33,7 +34,7 @@
 			box-shadow: 0 5px 10px #999;
 		}
 		.class1{
-			/* °´Å¥¼ä¸ô */
+			/* æŒ‰é’®é—´éš” */
 			width: 120px;
 			height: 34px;
 			float: left;
@@ -57,65 +58,65 @@
         <div id="lan">
             <div class="class1">
                 <a href="https://darkstarlan.github.io/">
-                    <button class="right">Ä¬ÈÏÖ÷Ò³</button>
+                    <button class="right">é»˜è®¤ä¸»é¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/search.html">
-                    <button class="right">µ¼º½Ò³</button>
+                    <button class="right">å¯¼èˆªé¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/notes/cpp.html">
-                    <button class="right">·µ»ØÄ¿Â¼</button>
+                    <button class="right">è¿”å›ç›®å½•</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/download/cpp.html">
-                    <button class="right">Ïà¹ØÏÂÔØ</button>
+                    <button class="right">ç›¸å…³ä¸‹è½½</button>
                 </a>
             </div>
         </div>
         <hr>
-        <!-- ÕıÎÄ -->
-        <h1 class="code">27 vectorÈİÆ÷ - ¹¹Ôìº¯Êı.cpp</h1>
+        <!-- æ­£æ–‡ -->
+        <h1 class="code">28 vectorå®¹å™¨ - èµ‹å€¼æ“ä½œ.cpp</h1>
         <pre>
             <code class="code">
-ï»¿#include&lt;iostream&gt;
+#include<iostream>
 using namespace std;
-#include&lt;vector&gt;
+#include<vector>
 
-void printVector(vector&lt;int&gt;& v)
+void printVector(vector<int>& v)
 {
-	for (vector&lt;int&gt;::iterator it = v.begin(); it != v.end(); it++)
+	for (vector<int>::iterator it = v.begin(); it != v.end(); it++)
 	{
-		cout &lt;&lt; *it &lt;&lt; " ";
+		cout << *it << " ";
 	}
-	cout &lt;&lt; endl;
+	cout << endl;
 }
 
 //28 vectorèµ‹å€¼
 void test01()
 {
-	vector&lt;int&gt; v1;
-	for (int i = 0; i &lt; 10; i++)
+	vector<int> v1;
+	for (int i = 0; i < 10; i++)
 	{
 		v1.push_back(i);
 	}
 	printVector(v1);
 
 	//èµ‹å€¼  operator=
-	vector&lt;int&gt; v2;
+	vector<int> v2;
 	v2 = v1;
 	printVector(v2);
 
 	//assign  å‰é—­åå¼€[)
-	vector&lt;int&gt; v3;
+	vector<int> v3;
 	v3.assign(v1.begin(), v1.end());
 	printVector(v3);
 
 	//nä¸ªelemæ–¹å¼èµ‹å€¼
-	vector&lt;int&gt; v4;
+	vector<int> v4;
 	v4.assign(10, 100);
 	printVector(v4);
 }
