--- a/notes/cpp/0157.html
+++ b/notes/cpp/0157.html
@@ -1,23 +1,24 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C++±Ê¼Ç</title>
+    <title>C++ç¬”è®°</title>
     <style type="text/css">
         @font-face {
 	        font-family: Consolas;
 	        src: url("https://github.com/DarkStarLan/DarkStarLan.github.io/blob/main/notes/Consolas.ttf");
         }
         #lan{
-			/* ĞŞ¸ÄÍ·²¿Ñ¡ÏîÀ¸³¤¶È(Ã¿¸ö120px) */
+			/* ä¿®æ”¹å¤´éƒ¨é€‰é¡¹æ é•¿åº¦(æ¯ä¸ª120px) */
 			width: 480px;
 			height: 34px;
 			position: relative;
 			margin: auto;
 		}
 		.right{
-			/* °´Å¥ÊôĞÔ */
+			/* æŒ‰é’®å±æ€§ */
 			font-size: 20px;
 			width: 100px;
 			border-radius: 6px;
@@ -33,7 +34,7 @@
 			box-shadow: 0 5px 10px #999;
 		}
 		.class1{
-			/* °´Å¥¼ä¸ô */
+			/* æŒ‰é’®é—´éš” */
 			width: 120px;
 			height: 34px;
 			float: left;
@@ -57,48 +58,48 @@
         <div id="lan">
             <div class="class1">
                 <a href="https://darkstarlan.github.io/">
-                    <button class="right">Ä¬ÈÏÖ÷Ò³</button>
+                    <button class="right">é»˜è®¤ä¸»é¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/search.html">
-                    <button class="right">µ¼º½Ò³</button>
+                    <button class="right">å¯¼èˆªé¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/notes/cpp.html">
-                    <button class="right">·µ»ØÄ¿Â¼</button>
+                    <button class="right">è¿”å›ç›®å½•</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/download/cpp.html">
-                    <button class="right">Ïà¹ØÏÂÔØ</button>
+                    <button class="right">ç›¸å…³ä¸‹è½½</button>
                 </a>
             </div>
         </div>
         <hr>
-        <!-- ÕıÎÄ -->
-        <h1 class="code">28 vectorÈİÆ÷ - ¸³Öµ²Ù×÷.cpp</h1>
+        <!-- æ­£æ–‡ -->
+        <h1 class="code">29 vectorå®¹å™¨ - å®¹é‡å’Œå¤§å°.cpp</h1>
         <pre>
             <code class="code">
-ï»¿#include&lt;iostream&gt;
+#include<iostream>
 using namespace std;
-#include&lt;vector&gt;
+#include<vector>
 
-void printVector(vector&lt;int&gt;& v)
+void printVector(vector<int>& v)
 {
-	for (vector&lt;int&gt;::iterator it = v.begin(); it != v.end(); it++)
+	for (vector<int>::iterator it = v.begin(); it != v.end(); it++)
 	{
-		cout &lt;&lt; *it &lt;&lt; " ";
+		cout << *it << " ";
 	}
-	cout &lt;&lt; endl;
+	cout << endl;
 }
 
 //vectorå®¹å™¨çš„å®¹é‡å’Œå¤§å°æ“ä½œ
 void test01()
 {
-	vector&lt;int&gt; v1;
-	for (int i = 0; i &lt; 10; i++)
+	vector<int> v1;
+	for (int i = 0; i < 10; i++)
 	{
 		v1.push_back(i);
 	}
@@ -106,13 +107,13 @@ void test01()
 
 	if (v1.empty())  //ä¸ºçœŸ ä»£è¡¨å®¹å™¨ä¸ºç©º
 	{
-		cout &lt;&lt; "v1ä¸ºç©º" &lt;&lt; endl;
+		cout << "v1ä¸ºç©º" << endl;
 	}
 	else
 	{
-		cout &lt;&lt; "v1ä¸ä¸ºç©º" &lt;&lt; endl;
-		cout &lt;&lt; "v1çš„å®¹é‡ä¸º: " &lt;&lt; v1.capacity() &lt;&lt; endl;
-		cout &lt;&lt; "v1çš„å¤§å°ä¸º: " &lt;&lt; v1.size() &lt;&lt; endl;
+		cout << "v1ä¸ä¸ºç©º" << endl;
+		cout << "v1çš„å®¹é‡ä¸º: " << v1.capacity() << endl;
+		cout << "v1çš„å¤§å°ä¸º: " << v1.size() << endl;
 	}
 
 	//é‡æ–°æŒ‡å®šå¤§å°
