--- a/notes/cpp/0165.html
+++ b/notes/cpp/0165.html
@@ -1,23 +1,24 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C++±Ê¼Ç</title>
+    <title>C++ç¬”è®°</title>
     <style type="text/css">
         @font-face {
 	        font-family: Consolas;
 	        src: url("https://github.com/DarkStarLan/DarkStarLan.github.io/blob/main/notes/Consolas.ttf");
         }
         #lan{
-			/* ĞŞ¸ÄÍ·²¿Ñ¡ÏîÀ¸³¤¶È(Ã¿¸ö120px) */
+			/* ä¿®æ”¹å¤´éƒ¨é€‰é¡¹æ é•¿åº¦(æ¯ä¸ª120px) */
 			width: 480px;
 			height: 34px;
 			position: relative;
 			margin: auto;
 		}
 		.right{
-			/* °´Å¥ÊôĞÔ */
+			/* æŒ‰é’®å±æ€§ */
 			font-size: 20px;
 			width: 100px;
 			border-radius: 6px;
@@ -33,7 +34,7 @@
 			box-shadow: 0 5px 10px #999;
 		}
 		.class1{
-			/* °´Å¥¼ä¸ô */
+			/* æŒ‰é’®é—´éš” */
 			width: 120px;
 			height: 34px;
 			float: left;
@@ -57,48 +58,48 @@
         <div id="lan">
             <div class="class1">
                 <a href="https://darkstarlan.github.io/">
-                    <button class="right">Ä¬ÈÏÖ÷Ò³</button>
+                    <button class="right">é»˜è®¤ä¸»é¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/search.html">
-                    <button class="right">µ¼º½Ò³</button>
+                    <button class="right">å¯¼èˆªé¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/notes/cpp.html">
-                    <button class="right">·µ»ØÄ¿Â¼</button>
+                    <button class="right">è¿”å›ç›®å½•</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/download/cpp.html">
-                    <button class="right">Ïà¹ØÏÂÔØ</button>
+                    <button class="right">ç›¸å…³ä¸‹è½½</button>
                 </a>
             </div>
         </div>
         <hr>
-        <!-- ÕıÎÄ -->
-        <h1 class="code">36 dequeÈİÆ÷ - ´óĞ¡²Ù×÷.cpp</h1>
+        <!-- æ­£æ–‡ -->
+        <h1 class="code">37 dequeå®¹å™¨ - æ’å…¥å’Œåˆ é™¤.cpp</h1>
         <pre>
             <code class="code">
-ï»¿#include&lt;iostream&gt;
+#include<iostream>
 using namespace std;
-#include&lt;deque&gt;
+#include<deque>
 //dequeå®¹å™¨æ’å…¥å’Œåˆ é™¤
 
-void printDeque(const deque&lt;int&gt;& d)
+void printDeque(const deque<int>& d)
 {
-	for (deque&lt;int&gt;::const_iterator it = d.begin(); it != d.end(); it++)
+	for (deque<int>::const_iterator it = d.begin(); it != d.end(); it++)
 	{
-		cout &lt;&lt; *it &lt;&lt; " ";
+		cout << *it << " ";
 	}
-	cout &lt;&lt; endl;
+	cout << endl;
 }
 
 //ä¸¤ç«¯æ“ä½œ
 void test01()
 {
-	deque&lt;int&gt; d1;
+	deque<int> d1;
 
 	//å°¾æ’
 	d1.push_back(10);
@@ -124,7 +125,7 @@ void test01()
 
 void test02()
 {
-	deque&lt;int&gt; d1;
+	deque<int> d1;
 	d1.push_back(10);
 	d1.push_back(20);
 	d1.push_front(100);
@@ -143,7 +144,7 @@ void test02()
 	printDeque(d1);
 
 	//æŒ‰ç…§åŒºé—´è¿›è¡Œæ’å…¥
-	deque&lt;int&gt; d2;
+	deque<int> d2;
 	d2.push_back(1);
 	d2.push_back(2);
 	d2.push_back(3);
@@ -155,14 +156,14 @@ void test02()
 
 void test03()
 {
-	deque&lt;int&gt; d1;
+	deque<int> d1;
 	d1.push_back(10);
 	d1.push_back(20);
 	d1.push_front(100);
 	d1.push_front(200);
 
 	//åˆ é™¤
-	deque&lt;int&gt;::iterator it = d1.begin();
+	deque<int>::iterator it = d1.begin();
 	it++;
 	d1.erase(it);
 	// 200 10 20
