--- a/notes/cpp/0166.html
+++ b/notes/cpp/0166.html
@@ -1,23 +1,24 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C++±Ê¼Ç</title>
+    <title>C++ç¬”è®°</title>
     <style type="text/css">
         @font-face {
 	        font-family: Consolas;
 	        src: url("https://github.com/DarkStarLan/DarkStarLan.github.io/blob/main/notes/Consolas.ttf");
         }
         #lan{
-			/* ĞŞ¸ÄÍ·²¿Ñ¡ÏîÀ¸³¤¶È(Ã¿¸ö120px) */
+			/* ä¿®æ”¹å¤´éƒ¨é€‰é¡¹æ é•¿åº¦(æ¯ä¸ª120px) */
 			width: 480px;
 			height: 34px;
 			position: relative;
 			margin: auto;
 		}
 		.right{
-			/* °´Å¥ÊôĞÔ */
+			/* æŒ‰é’®å±æ€§ */
 			font-size: 20px;
 			width: 100px;
 			border-radius: 6px;
@@ -33,7 +34,7 @@
 			box-shadow: 0 5px 10px #999;
 		}
 		.class1{
-			/* °´Å¥¼ä¸ô */
+			/* æŒ‰é’®é—´éš” */
 			width: 120px;
 			height: 34px;
 			float: left;
@@ -57,38 +58,38 @@
         <div id="lan">
             <div class="class1">
                 <a href="https://darkstarlan.github.io/">
-                    <button class="right">Ä¬ÈÏÖ÷Ò³</button>
+                    <button class="right">é»˜è®¤ä¸»é¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/search.html">
-                    <button class="right">µ¼º½Ò³</button>
+                    <button class="right">å¯¼èˆªé¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/notes/cpp.html">
-                    <button class="right">·µ»ØÄ¿Â¼</button>
+                    <button class="right">è¿”å›ç›®å½•</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/download/cpp.html">
-                    <button class="right">Ïà¹ØÏÂÔØ</button>
+                    <button class="right">ç›¸å…³ä¸‹è½½</button>
                 </a>
             </div>
         </div>
         <hr>
-        <!-- ÕıÎÄ -->
-        <h1 class="code">37 dequeÈİÆ÷ - ²åÈëºÍÉ¾³ı.cpp</h1>
+        <!-- æ­£æ–‡ -->
+        <h1 class="code">38 dequeå®¹å™¨ - æ•°æ®å­˜å–.cpp</h1>
         <pre>
             <code class="code">
-ï»¿#include&lt;iostream&gt;
+#include<iostream>
 using namespace std;
-#include&lt;deque&gt;
+#include<deque>
 
 //dequeå®¹å™¨æ•°æ®å­˜å–
 void test01()
 {
-	deque&lt;int&gt; d;
+	deque<int> d;
 	d.push_back(10);
 	d.push_back(20);
 	d.push_back(30);
@@ -98,21 +99,21 @@ void test01()
 
 	//é€šè¿‡[]æ–¹å¼è®¿é—®å…ƒç´ 
 	// 300 200 100 10 20 30
-	for (int i = 0; i &lt; d.size(); i++)
+	for (int i = 0; i < d.size(); i++)
 	{
-		cout &lt;&lt; d[i] &lt;&lt; " ";
+		cout << d[i] << " ";
 	}
-	cout &lt;&lt; endl;
+	cout << endl;
 
 	//é€šè¿‡atæ–¹å¼æ¥è®¿é—®å…ƒç´ 
-	for (int i = 0; i &lt; d.size(); i++)
+	for (int i = 0; i < d.size(); i++)
 	{
-		cout &lt;&lt; d.at(i) &lt;&lt; " ";
+		cout << d.at(i) << " ";
 	}
-	cout &lt;&lt; endl;
+	cout << endl;
 
-	cout &lt;&lt; "ç¬¬ä¸€ä¸ªå…ƒç´ ä¸º: " &lt;&lt; d.front() &lt;&lt; endl;
-	cout &lt;&lt; "æœ€åä¸€ä¸ªå…ƒç´ : " &lt;&lt; d.back() &lt;&lt; endl;
+	cout << "ç¬¬ä¸€ä¸ªå…ƒç´ ä¸º: " << d.front() << endl;
+	cout << "æœ€åä¸€ä¸ªå…ƒç´ : " << d.back() << endl;
 }
 
 int main()
