--- a/notes/cpp/0170.html
+++ b/notes/cpp/0170.html
@@ -1,23 +1,24 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C++±Ê¼Ç</title>
+    <title>C++ç¬”è®°</title>
     <style type="text/css">
         @font-face {
 	        font-family: Consolas;
 	        src: url("https://github.com/DarkStarLan/DarkStarLan.github.io/blob/main/notes/Consolas.ttf");
         }
         #lan{
-			/* ĞŞ¸ÄÍ·²¿Ñ¡ÏîÀ¸³¤¶È(Ã¿¸ö120px) */
+			/* ä¿®æ”¹å¤´éƒ¨é€‰é¡¹æ é•¿åº¦(æ¯ä¸ª120px) */
 			width: 480px;
 			height: 34px;
 			position: relative;
 			margin: auto;
 		}
 		.right{
-			/* °´Å¥ÊôĞÔ */
+			/* æŒ‰é’®å±æ€§ */
 			font-size: 20px;
 			width: 100px;
 			border-radius: 6px;
@@ -33,7 +34,7 @@
 			box-shadow: 0 5px 10px #999;
 		}
 		.class1{
-			/* °´Å¥¼ä¸ô */
+			/* æŒ‰é’®é—´éš” */
 			width: 120px;
 			height: 34px;
 			float: left;
@@ -57,49 +58,49 @@
         <div id="lan">
             <div class="class1">
                 <a href="https://darkstarlan.github.io/">
-                    <button class="right">Ä¬ÈÏÖ÷Ò³</button>
+                    <button class="right">é»˜è®¤ä¸»é¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/search.html">
-                    <button class="right">µ¼º½Ò³</button>
+                    <button class="right">å¯¼èˆªé¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/notes/cpp.html">
-                    <button class="right">·µ»ØÄ¿Â¼</button>
+                    <button class="right">è¿”å›ç›®å½•</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/download/cpp.html">
-                    <button class="right">Ïà¹ØÏÂÔØ</button>
+                    <button class="right">ç›¸å…³ä¸‹è½½</button>
                 </a>
             </div>
         </div>
         <hr>
-        <!-- ÕıÎÄ -->
-        <h1 class="code">41 stackÈİÆ÷.cpp</h1>
+        <!-- æ­£æ–‡ -->
+        <h1 class="code">43 listå®¹å™¨ - æ„é€ å‡½æ•°.cpp</h1>
         <pre>
             <code class="code">
-ï»¿#include&lt;iostream&gt;
+#include<iostream>
 using namespace std;
-#include&lt;list&gt;
+#include<list>
 
 //listå®¹å™¨æ„é€ å‡½æ•°
 
-void printList(const list&lt;int&gt;& L)
+void printList(const list<int>& L)
 {
-	for (list&lt;int&gt;::const_iterator it = L.begin(); it != L.end(); it++)
+	for (list<int>::const_iterator it = L.begin(); it != L.end(); it++)
 	{
-		cout &lt;&lt; *it &lt;&lt; " ";
+		cout << *it << " ";
 	}
-	cout &lt;&lt; endl;
+	cout << endl;
 }
 
 void test01()
 {
 	//åˆ›å»ºlistå®¹å™¨
-	list&lt;int&gt; L1;  //é»˜è®¤æ„é€ 
+	list<int> L1;  //é»˜è®¤æ„é€ 
 
 	//æ·»åŠ å…ƒç´ 
 	L1.push_back(10);
@@ -111,15 +112,15 @@ void test01()
 	printList(L1);
 
 	//åŒºé—´æ–¹å¼æ„é€ 
-	list&lt;int&gt; L2(L1.begin(), L1.end());
+	list<int> L2(L1.begin(), L1.end());
 	printList(L2);
 
 	//æ‹·è´æ„é€ 
-	list&lt;int&gt; L3(L2);
+	list<int> L3(L2);
 	printList(L3);
 
 	//nä¸ªele
-	list&lt;int&gt; L4(10, 1000);
+	list<int> L4(10, 1000);
 	printList(L4);
 }
 
