--- a/notes/cpp/0191.html
+++ b/notes/cpp/0191.html
@@ -1,23 +1,24 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C++±Ê¼Ç</title>
+    <title>C++ç¬”è®°</title>
     <style type="text/css">
         @font-face {
 	        font-family: Consolas;
 	        src: url("https://github.com/DarkStarLan/DarkStarLan.github.io/blob/main/notes/Consolas.ttf");
         }
         #lan{
-			/* ĞŞ¸ÄÍ·²¿Ñ¡ÏîÀ¸³¤¶È(Ã¿¸ö120px) */
+			/* ä¿®æ”¹å¤´éƒ¨é€‰é¡¹æ é•¿åº¦(æ¯ä¸ª120px) */
 			width: 480px;
 			height: 34px;
 			position: relative;
 			margin: auto;
 		}
 		.right{
-			/* °´Å¥ÊôĞÔ */
+			/* æŒ‰é’®å±æ€§ */
 			font-size: 20px;
 			width: 100px;
 			border-radius: 6px;
@@ -33,7 +34,7 @@
 			box-shadow: 0 5px 10px #999;
 		}
 		.class1{
-			/* °´Å¥¼ä¸ô */
+			/* æŒ‰é’®é—´éš” */
 			width: 120px;
 			height: 34px;
 			float: left;
@@ -57,34 +58,34 @@
         <div id="lan">
             <div class="class1">
                 <a href="https://darkstarlan.github.io/">
-                    <button class="right">Ä¬ÈÏÖ÷Ò³</button>
+                    <button class="right">é»˜è®¤ä¸»é¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/search.html">
-                    <button class="right">µ¼º½Ò³</button>
+                    <button class="right">å¯¼èˆªé¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/notes/cpp.html">
-                    <button class="right">·µ»ØÄ¿Â¼</button>
+                    <button class="right">è¿”å›ç›®å½•</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/download/cpp.html">
-                    <button class="right">Ïà¹ØÏÂÔØ</button>
+                    <button class="right">ç›¸å…³ä¸‹è½½</button>
                 </a>
             </div>
         </div>
         <hr>
-        <!-- ÕıÎÄ -->
-        <h1 class="code">62 mapÈİÆ÷ - ÅÅĞò.cpp</h1>
+        <!-- æ­£æ–‡ -->
+        <h1 class="code">66 è°“è¯ - äºŒå…ƒè°“è¯.cpp</h1>
         <pre>
             <code class="code">
-ï»¿#include&lt;iostream&gt;
+#include<iostream>
 using namespace std;
-#include&lt;vector&gt;
-#include&lt;algorithm&gt;
+#include<vector>
+#include<algorithm>
 
 //äºŒå…ƒè°“è¯
 class MyCompare
@@ -92,13 +93,13 @@ class MyCompare
 public:
 	bool operator()(int val1, int val2) const
 	{
-		return val1 &gt; val2;
+		return val1 > val2;
 	}
 };
 
 void test01()
 {
-	vector&lt;int&gt; v;
+	vector<int> v;
 	v.push_back(10);
 	v.push_back(40);
 	v.push_back(20);
@@ -106,21 +107,21 @@ void test01()
 	v.push_back(50);
 
 	sort(v.begin(), v.end());
-	for (vector&lt;int&gt;::iterator it = v.begin(); it != v.end(); it++)
+	for (vector<int>::iterator it = v.begin(); it != v.end(); it++)
 	{
-		cout &lt;&lt; *it &lt;&lt; " ";
+		cout << *it << " ";
 	}
-	cout &lt;&lt; endl;
+	cout << endl;
 
 	//ä½¿ç”¨å‡½æ•°å¯¹è±¡ æ”¹å˜ç®—æ³•ç­–ç•¥ï¼Œæ’åºè§„åˆ™å˜ä¸ºä»å¤§åˆ°å°
 	sort(v.begin(), v.end(), MyCompare());
 
-	cout &lt;&lt; "-----------------------" &lt;&lt; endl;
-	for (vector&lt;int&gt;::iterator it = v.begin(); it != v.end(); it++)
+	cout << "-----------------------" << endl;
+	for (vector<int>::iterator it = v.begin(); it != v.end(); it++)
 	{
-		cout &lt;&lt; *it &lt;&lt; " ";
+		cout << *it << " ";
 	}
-	cout &lt;&lt; endl;
+	cout << endl;
 }
 
 int main()
