--- a/notes/cpp/0192.html
+++ b/notes/cpp/0192.html
@@ -1,23 +1,24 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C++±Ê¼Ç</title>
+    <title>C++ç¬”è®°</title>
     <style type="text/css">
         @font-face {
 	        font-family: Consolas;
 	        src: url("https://github.com/DarkStarLan/DarkStarLan.github.io/blob/main/notes/Consolas.ttf");
         }
         #lan{
-			/* ĞŞ¸ÄÍ·²¿Ñ¡ÏîÀ¸³¤¶È(Ã¿¸ö120px) */
+			/* ä¿®æ”¹å¤´éƒ¨é€‰é¡¹æ é•¿åº¦(æ¯ä¸ª120px) */
 			width: 480px;
 			height: 34px;
 			position: relative;
 			margin: auto;
 		}
 		.right{
-			/* °´Å¥ÊôĞÔ */
+			/* æŒ‰é’®å±æ€§ */
 			font-size: 20px;
 			width: 100px;
 			border-radius: 6px;
@@ -33,7 +34,7 @@
 			box-shadow: 0 5px 10px #999;
 		}
 		.class1{
-			/* °´Å¥¼ä¸ô */
+			/* æŒ‰é’®é—´éš” */
 			width: 120px;
 			height: 34px;
 			float: left;
@@ -57,33 +58,33 @@
         <div id="lan">
             <div class="class1">
                 <a href="https://darkstarlan.github.io/">
-                    <button class="right">Ä¬ÈÏÖ÷Ò³</button>
+                    <button class="right">é»˜è®¤ä¸»é¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/search.html">
-                    <button class="right">µ¼º½Ò³</button>
+                    <button class="right">å¯¼èˆªé¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/notes/cpp.html">
-                    <button class="right">·µ»ØÄ¿Â¼</button>
+                    <button class="right">è¿”å›ç›®å½•</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/download/cpp.html">
-                    <button class="right">Ïà¹ØÏÂÔØ</button>
+                    <button class="right">ç›¸å…³ä¸‹è½½</button>
                 </a>
             </div>
         </div>
         <hr>
-        <!-- ÕıÎÄ -->
-        <h1 class="code">63 STL°¸Àı - Ô±¹¤·Ö×é.cpp</h1>
+        <!-- æ­£æ–‡ -->
+        <h1 class="code">67 å†…å»ºå‡½æ•°å¯¹è±¡ - ç®—æ•°ä»¿å‡½æ•°.cpp</h1>
         <pre>
             <code class="code">
-ï»¿#include&lt;iostream&gt;
+#include<iostream>
 using namespace std;
-#include&lt;functional&gt;
+#include<functional>
 
 // plus			åŠ æ³•ä»¿å‡½æ•°
 // minus		å‡æ³•ä»¿å‡½æ•°
@@ -97,17 +98,17 @@ using namespace std;
 //negate ä¸€å…ƒä»¿å‡½æ•° å–åä»¿å‡½æ•°
 void test01()
 {
-	negate&lt;int&gt; n;
+	negate<int> n;
 
-	cout &lt;&lt; n(50) &lt;&lt; endl;;
+	cout << n(50) << endl;;
 }
 
 //plus äºŒå…ƒä»¿å‡½æ•° åŠ æ³•ä»¿å‡½æ•°
 void test02()
 {
-	plus&lt;int&gt; p;
+	plus<int> p;
 
-	cout &lt;&lt; p(10, 20) &lt;&lt; endl;
+	cout << p(10, 20) << endl;
 }
 
 int main()
