--- a/notes/cpp/0198.html
+++ b/notes/cpp/0198.html
@@ -1,23 +1,24 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C++±Ê¼Ç</title>
+    <title>C++ç¬”è®°</title>
     <style type="text/css">
         @font-face {
 	        font-family: Consolas;
 	        src: url("https://github.com/DarkStarLan/DarkStarLan.github.io/blob/main/notes/Consolas.ttf");
         }
         #lan{
-			/* ĞŞ¸ÄÍ·²¿Ñ¡ÏîÀ¸³¤¶È(Ã¿¸ö120px) */
+			/* ä¿®æ”¹å¤´éƒ¨é€‰é¡¹æ é•¿åº¦(æ¯ä¸ª120px) */
 			width: 480px;
 			height: 34px;
 			position: relative;
 			margin: auto;
 		}
 		.right{
-			/* °´Å¥ÊôĞÔ */
+			/* æŒ‰é’®å±æ€§ */
 			font-size: 20px;
 			width: 100px;
 			border-radius: 6px;
@@ -33,7 +34,7 @@
 			box-shadow: 0 5px 10px #999;
 		}
 		.class1{
-			/* °´Å¥¼ä¸ô */
+			/* æŒ‰é’®é—´éš” */
 			width: 120px;
 			height: 34px;
 			float: left;
@@ -57,35 +58,35 @@
         <div id="lan">
             <div class="class1">
                 <a href="https://darkstarlan.github.io/">
-                    <button class="right">Ä¬ÈÏÖ÷Ò³</button>
+                    <button class="right">é»˜è®¤ä¸»é¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/search.html">
-                    <button class="right">µ¼º½Ò³</button>
+                    <button class="right">å¯¼èˆªé¡µ</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/notes/cpp.html">
-                    <button class="right">·µ»ØÄ¿Â¼</button>
+                    <button class="right">è¿”å›ç›®å½•</button>
                 </a>
             </div>
             <div class="class1">
                 <a href="https://darkstarlan.github.io/download/cpp.html">
-                    <button class="right">Ïà¹ØÏÂÔØ</button>
+                    <button class="right">ç›¸å…³ä¸‹è½½</button>
                 </a>
             </div>
         </div>
         <hr>
-        <!-- ÕıÎÄ -->
-        <h1 class="code">69 ÄÚ½¨º¯Êı¶ÔÏó - Âß¼­·Âº¯Êı.cpp</h1>
+        <!-- æ­£æ–‡ -->
+        <h1 class="code">73 å¸¸ç”¨æŸ¥æ‰¾ç®—æ³• - find_if.cpp</h1>
         <pre>
             <code class="code">
-ï»¿#include&lt;iostream&gt;
+#include<iostream>
 using namespace std;
-#include&lt;vector&gt;
-#include&lt;algorithm&gt;
-#include&lt;string&gt;
+#include<vector>
+#include<algorithm>
+#include<string>
 
 //å¸¸ç”¨æŸ¥æ‰¾ç®—æ³• find_if
 
@@ -95,26 +96,26 @@ class GreaterFive
 public:
 	bool operator()(int val)
 	{
-		return val &gt; 5;
+		return val > 5;
 	}
 };
 
 void test01()
 {
-	vector&lt;int&gt; v;
-	for (int i = 0; i &lt; 10; i++)
+	vector<int> v;
+	for (int i = 0; i < 10; i++)
 	{
 		v.push_back(i);
 	}
 
-	vector&lt;int&gt;::iterator it = find_if(v.begin(), v.end(), GreaterFive());
+	vector<int>::iterator it = find_if(v.begin(), v.end(), GreaterFive());
 	if (it == v.end())
 	{
-		cout &lt;&lt; "æ²¡æœ‰æ‰¾åˆ°" &lt;&lt; endl;
+		cout << "æ²¡æœ‰æ‰¾åˆ°" << endl;
 	}
 	else
 	{
-		cout &lt;&lt; "æ‰¾åˆ°å¤§äº5çš„æ•°å­—ä¸º: " &lt;&lt; *it &lt;&lt; endl;
+		cout << "æ‰¾åˆ°å¤§äº5çš„æ•°å­—ä¸º: " << *it << endl;
 	}
 }
 
@@ -124,8 +125,8 @@ class Person
 public:
 	Person(string name, int age)
 	{
-		this-&gt;m_Name = name;
-		this-&gt;m_Age = age;
+		this->m_Name = name;
+		this->m_Age = age;
 	}
 	string m_Name;
 	int m_Age;
@@ -136,13 +137,13 @@ class Greater20
 public:
 	bool operator()(Person& p)
 	{
-		return p.m_Age &gt; 20;
+		return p.m_Age > 20;
 	}
 };
 
 void test02()
 {
-	vector&lt;Person&gt; v;
+	vector<Person> v;
 
 	//åˆ›å»ºæ•°æ®
 	Person p1("aaa", 10);
@@ -156,14 +157,14 @@ void test02()
 	v.push_back(p4);
 
 	//æ‰¾å¹´é¾„å¤§äº20çš„äºº
-	vector&lt;Person&gt;::iterator it = find_if(v.begin(), v.end(), Greater20());
+	vector<Person>::iterator it = find_if(v.begin(), v.end(), Greater20());
 	if (it == v.end())
 	{
-		cout &lt;&lt; "æ²¡æœ‰æ‰¾åˆ°" &lt;&lt; endl;
+		cout << "æ²¡æœ‰æ‰¾åˆ°" << endl;
 	}
 	else
 	{
-		cout &lt;&lt; "æ‰¾åˆ° å§“å: " &lt;&lt; it-&gt;m_Name &lt;&lt; " å¹´é¾„: " &lt;&lt; it-&gt;m_Age &lt;&lt; endl;
+		cout << "æ‰¾åˆ° å§“å: " << it->m_Name << " å¹´é¾„: " << it->m_Age << endl;
 	}
 }
 
