--- a/notes/cpp/0216.html
+++ b/notes/cpp/0216.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
@@ -78,110 +79,25 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">87 常用算术生成算法 - fill.cpp</h1>
+        <h1 class="code">person.h</h1>
         <pre>
             <code class="code">
-#include&lt;iostream&gt;
+#pragma once
+#include<iostream>
 using namespace std;
-#include "头文件/MyArray.hpp"
-#include&lt;string&gt;
 
-void printIntArray(MyArray&lt;int&gt;& arr)
-{
-	for (int i = 0; i &lt; arr.getSize(); i++)
-	{
-		cout &lt;&lt; arr[i] &lt;&lt; endl;
-	}
-}
-
-void test01()
-{
-	MyArray&lt;int&gt; arr1(5);
-	
-	for (int i = 0; i &lt; 5; i++)
-	{
-		//利用尾插法向数组中插入数据
-		arr1.Push_Back(i);
-	}
-	cout &lt;&lt; "arr1的打印输出为: " &lt;&lt; endl;
-	printIntArray(arr1);
-
-	cout &lt;&lt; "arr1的容量为: " &lt;&lt; arr1.getCapacity() &lt;&lt; endl;
-	cout &lt;&lt; "arr1的大小为: " &lt;&lt; arr1.getSize() &lt;&lt; endl;
-
-	MyArray&lt;int&gt;arr2(arr1);
-
-	cout &lt;&lt; "arr2的打印输出为: " &lt;&lt; endl;
-
-	printIntArray(arr2);
-
-	//尾删
-	arr2.Pop_Back();
-	cout &lt;&lt; "arr2尾删后: " &lt;&lt; endl;
-	cout &lt;&lt; "arr2的容量为: " &lt;&lt; arr2.getCapacity() &lt;&lt; endl;
-	cout &lt;&lt; "arr2的大小为: " &lt;&lt; arr2.getSize() &lt;&lt; endl;
-
-	//MyArray&lt;int&gt;arr3(100);
-	//arr3 = arr1;
-}
-
-//测试自定义数据类型
+#include<string>
+template<class T1, class T2>
 class Person
 {
 public:
+	Person(T1 name, T2 age);
 
-	Person() {};
-	Person(string name, int age)
-	{
-		this-&gt;m_Name = name;
-		this-&gt;m_Age = age;
-	}
+	void showPerson();
 
-	string m_Name;
-	int m_Age;
+	T1 m_Name;
+	T2 m_Age;
 };
-
-void printPersonArray(MyArray&lt;Person&gt;& arr)
-{
-	for (int i = 0; i &lt; arr.getSize(); i++)
-	{
-		cout &lt;&lt; "姓名: " &lt;&lt; arr[i].m_Name &lt;&lt; " 年龄: " &lt;&lt; arr[i].m_Age &lt;&lt; endl;
-	}
-}
-
-void test02()
-{
-	MyArray&lt;Person&gt; arr(10);
-
-	Person p1("孙悟空", 999);
-	Person p2("韩信", 30);
-	Person p3("妲己", 20);
-	Person p4("赵云", 25);
-	Person p5("安琪拉", 27);
-
-	//将数据插入到数组中
-	arr.Push_Back(p1);
-	arr.Push_Back(p2);
-	arr.Push_Back(p3);
-	arr.Push_Back(p4);
-	arr.Push_Back(p5);
-
-	//打印数组
-	printPersonArray(arr);
-	
-	//输出容量
-	cout &lt;&lt; "arr容量为: " &lt;&lt; arr.getCapacity() &lt;&lt; endl;
-	//输出大小
-	cout &lt;&lt; "arr大小为: " &lt;&lt; arr.getSize() &lt;&lt; endl;
-}
-
-int main()
-{
-	//test01();
-	test02();
-
-	return 0;
-}
             </code>
         </pre>
     </body>
