--- a/notes/cpp/0221.html
+++ b/notes/cpp/0221.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
@@ -78,37 +79,118 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">person.hpp</h1>
+        <h1 class="code">63 STL案例 - 员工分组.cpp</h1>
         <pre>
             <code class="code">
-#pragma once
-#include&lt;iostream&gt;
+#include<iostream>
 using namespace std;
+#include<vector>
+#include<string>
+#include<map>
+#include<ctime>
 
-#include&lt;string&gt;
-template&lt;class T1, class T2&gt;
-class Person
+//-公司今天招聘了10个员工(ABCDEFGHIJ)，10名员工进入公司之后，需要指派员工在哪个部门工作
+//-员工信息有：姓名  工资组成；部门分为：策划、美术、研发
+//-随机给10名员工分配部门和工资
+//-通过multimap进行信息的插入   key(部门编号) value(员工)
+//-分部门显示员工信息
+
+#define CEHUA 0
+#define MEISHU 1
+#define YANFA 2
+
+class Worker
 {
 public:
-	Person(T1 name, T2 age);
-
-	void showPerson();
-
-	T1 m_Name;
-	T2 m_Age;
+	string m_Name;
+	int m_Salary;
 };
 
-template&lt;class T1, class T2&gt;
-Person&lt;T1, T2&gt;::Person(T1 name, T2 age)
+void createWorker(vector<Worker>& v)
 {
-	this-&gt;m_Name = name;
-	this-&gt;m_Age = age;
+	string nameSeed = "ABCDEFGHIJ";
+	for (int i = 0; i < 10; ++i)
+	{
+		Worker worker;
+		worker.m_Name = "员工";
+		worker.m_Name += nameSeed[i];
+
+		worker.m_Salary = rand() % 10000 + 10000;  // 10000 ~ 19999
+		//将员工放入到容器中
+		v.push_back(worker);
+	}
 }
 
-template&lt;class T1, class T2&gt;
-void Person&lt;T1, T2&gt;::showPerson()
+//员工分组
+void setGroup(vector<Worker>& v, multimap<int, Worker>& m)
 {
-	cout &lt;&lt; "姓名: " &lt;&lt; this-&gt;m_Name &lt;&lt; " 年龄: " &lt;&lt; this-&gt;m_Age &lt;&lt; endl;
+	for (vector<Worker>::iterator it = v.begin(); it != v.end(); it++)
+	{
+		//产生随机部门编号
+		int deptId = rand() % 3;  // 0 1 2
+
+		//将员工插入到分组中
+		//key部门编号，value具体员工
+		m.insert(make_pair(deptId, *it));
+	}
+}
+
+void showWorkerByGroup(multimap<int, Worker>& m)
+{
+	// 0 A B C   1 D E   2 F G ...
+	cout << "策划部门: " << endl;
+
+	multimap<int, Worker>::iterator pos = m.find(CEHUA);
+	int count = m.count(CEHUA);  //统计具体人数
+	int index = 0;
+	for (; pos != m.end() && index < count; pos++, index++)
+	{
+		cout << "姓名: " << pos->second.m_Name << " 工资: " << pos->second.m_Salary << endl;
+	}
+
+	cout << "----------------------" << endl;
+	cout << "美术部门: " << endl;
+	pos = m.find(MEISHU);
+	count = m.count(MEISHU);  //统计具体人数
+	index = 0;
+	for (; pos != m.end() && index < count; pos++, index++)
+	{
+		cout << "姓名: " << pos->second.m_Name << " 工资: " << pos->second.m_Salary << endl;
+	}
+
+	cout << "----------------------" << endl;
+	cout << "研发部门: " << endl;
+	pos = m.find(YANFA);
+	count = m.count(YANFA);  //统计具体人数
+	index = 0;
+	for (; pos != m.end() && index < count; pos++, index++)
+	{
+		cout << "姓名: " << pos->second.m_Name << " 工资: " << pos->second.m_Salary << endl;
+	}
+}
+
+int main()
+{
+	srand((unsigned int)time(NULL));
+
+	//1.创建员工
+	vector<Worker> vWorker;
+	createWorker(vWorker);
+
+	//2.员工分组
+	multimap<int, Worker> mWorker;
+	setGroup(vWorker, mWorker);
+
+	//3.分组显示员工
+	showWorkerByGroup(mWorker);
+
+	//测试
+	//for (vector<Worker>::iterator it = vWorker.begin(); it != vWorker.end(); it++)
+	//{
+	//	cout << "姓名: " << it->m_Name << " 工资: " << it->m_Salary << endl;
+	//}
+
+	return 0;
 }
             </code>
         </pre>
